# FoFo-Censor

./: .gitignore  FoFo-Censor-DESIGN.md  README.md  pyproject.toml  requirements.txt
fofo_censor/: __init__.py  cli.py
fofo_censor/audio/: classify.py  disambiguate.py  safeword.py  scan.py  transcribe.py
fofo_censor/config/: __init__.py  logging.py  paths.py
fofo_censor/data/wordlists/: base_profanity.json
fofo_censor/decision/: __init__.py  coverage.py  engine.py
fofo_censor/disclaimers/: default.txt
fofo_censor/filtermap/: __init__.py  export.py  schema.py
fofo_censor/model/: __init__.py  client.py
fofo_censor/probe/: __init__.py  fingerprint.py
fofo_censor/profiles/: __init__.py  loader.py  schema.py
fofo_censor/profiles/starter/: religious-mom.profile.json
fofo_censor/prompts/: __init__.py  audio_disambiguator.v1.txt  audio_scan.v1.txt  cutaway_writer.v1.txt  safeword_writer.v1.txt  visual_judge.v1.txt
fofo_censor/render/: __init__.py  beep.py  cutaway.py  disclaimer.py  encode.py  pipeline.py
fofo_censor/tts/: __init__.py  kokoro.py
fofo_censor/tui/: __init__.py  app.py
fofo_censor/visual/: __init__.py  cutaway.py  judge.py  shots.py
tests/: test_decision.py  test_disambiguate.py  test_render.py  test_scan.py  test_wordlist.py
